--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -1,5 +1,6 @@
 config KERNEL_HACK
 	tristate "Kernel Hack Driver"
 	default m
+	depends on MODULES
 	help
 	This is the kernel hack driver for android system.
